Fix dateRange layout on mobile

--- a/src/typed-formik-form/components/formik-date-interval-picker/dateIntervalPicker.less
+++ b/src/typed-formik-form/components/formik-date-interval-picker/dateIntervalPicker.less
@@ -11,7 +11,7 @@
         @media (max-width: 736px) {
             display: block;
 
-            .skjemaelement:not(:first-child) {
+            .skjemagruppe:not(:first-child) {
                 margin-top: 1rem;
             }
         }
